--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
             <div class="mb-3 col-5">
                 <label for="name" class="form-label">Nome</label>
                 <input type="text" class="form-control" id="name" placeholder="Digite seu nome">
+                <span class="text-left" id="contadorCaracteres"></span><br>
             </div>
-            <div class="mb-3 col-3">
+            <span id="msgNome" class="text-danger mb-3"></span>
+            <div class="mb-3 col-5">
                 <label for="data_nascimento" class="form-label">Data de nascimento</label>
                 <input type="date" class="form-control" id="data_nascimento"
                     placeholder="Digite sua Data de Nascimento">
             </div>
-            <button class="btn btn-outline-success" id="btn_salvar" type="submit">Salvar</button>
+            <button class="btn btn-outline-success col-5" id="btn_salvar" type="submit">Salvar</button>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
                 crossorigin="anonymous"></script>
