--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <title>#7DaysOfCode</title>
 </head>
 
@@ -13,6 +14,7 @@
     <div class="container">
         <h1>Cadastro de pessoas</h1>
         <form id="form">
+            <input type="text" class="form-control" id="id" hidden>
             <div class="mb-3 col-5">
                 <label for="name" class="form-label">Nome</label>
                 <input type="text" class="form-control" id="name" placeholder="Digite seu nome">
@@ -30,7 +32,7 @@
                 crossorigin="anonymous"></script>
             <script src="index.js"></script>
         </form>
-        <div class="mt-3">
+        <div class="mt-3 col-5">
             <p id="log"></p>
         </div>
     </div>
