--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <link rel="stylesheet" href="styles.css">
     <title>#7DaysOfCode</title>
 </head>
 
 <body>
     <div class="container">
         <h1>Cadastro de pessoas</h1>
+        <div class="col">
         <form id="form">
             <input type="text" class="form-control" id="id" hidden>
             <div class="mb-3 col-5">
@@ -32,6 +34,7 @@
                 crossorigin="anonymous"></script>
             <script src="index.js"></script>
         </form>
+        </div>
         <div class="mt-3 col-5">
             <p id="log"></p>
         </div>
